修复变量链式映射问题，测试了一下镜像站，完全没有问题了，各个功能都正常，混淆脚本初步调试成功

--- a/obfuscate-config.json
+++ b/obfuscate-config.json
@@ -38,7 +38,7 @@
       "RestApi",
       "Sort",
 
-      "ProLoader",
+      "Loader",
       "PCodeManager",
       "Pro_Plugin_Updater",
       "HooksRegistrar"
@@ -54,9 +54,15 @@
       "__wakeup",
       "__callStatic",
 
-      "get_instance",
-      "get_error_message"
+      "get_error_message",
+      "get",
+      "set",
+      "query",
+      "prepare",
+      "is_main_query",
+      "get_col",
 
+      "get_instance"
     ],
 
     "globals":[
